--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Powder*</title>
+    <title>Powder</title>
+    <meta name="description" content="Track snow conditions at your favorite ski resorts">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
     <link rel="apple-touch-icon-precomposed" href="<%= asset_path('apple-touch-icon-precomposed.png') %>" type="image/png" />
+    <link rel="icon" href="<%= asset_path('apple-touch-icon-precomposed.png') %>" type="image/png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="<%= asset_path('application.css') %>">
 
     <script type="text/javascript" charset="utf-8">
       window.resorts_json = <%= @resorts %>;
-      window.states_json = <%= @states %>;      
+      window.states_json = <%= @states %>;       
     </script>
     
     <script src="<%= asset_path('application.js') %>"></script>
