Rolled back. The JSON format is not the problem.

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="<%= asset_path('application.css') %>">
 
     <script type="text/javascript" charset="utf-8">
-      window.resorts_json = JSON.parse(<%= @resorts %>);
+      window.resorts_json = <%= @resorts %>;
       window.states_json = <%= @states %>;       
     </script>
     
